<resources>
    <string name="app_name">پادشاه اطلاعات</string>
    <string name="error_answer">خطا در ثبت پاسخ</string>
    <string name="error_category_set">خطا در ثبت دسته‌بندی‌ها</string>
    <string name="error_internet">عدم دسترسی به اینترنت</string>
    <string name="error_login">خطا در نام کاربری یا رمز عبور</string>
    <string name="error_question">خطا در دریافت سؤال</string>
    <string name="label_answer_a">گزینه‌ی اول</string>
    <string name="label_answer_b">گزینه‌ی دوم</string>
    <string name="label_answer_c">گزینه‌ی سوم</string>
    <string name="label_answer_d">گزینه‌ی چهارم</string>
    <string name="label_back">بازگشت</string>
    <string name="label_cancel">لغو</string>
    <string name="label_cancel_search">لغو جستجو</string>
    <string name="label_category">دسته‌بندی</string>
    <string name="label_confirm">تأیید</string>
    <string name="label_current_quest">مسابقه‌ی فعلی</string>
    <string name="label_exit">خروج از برنامه</string>
    <string name="label_login">ورود</string>
    <string name="label_message">پیام</string>
    <string name="label_name">نام</string>
    <string name="label_new">جدید</string>
    <string name="label_opponent">حریف</string>
    <string name="label_password">رمز عبور</string>
    <string name="label_player1">بازیکن اول</string>
    <string name="label_player2">بازیکن دوم</string>
    <string name="label_question">سؤال</string>
    <string name="label_quests">مسابقات</string>
    <string name="label_retry">تلاش مجدد</string>
    <string name="label_score">امتیاز</string>
    <string name="label_search">جستجو</string>
    <string name="label_set">انتخاب</string>
    <string name="label_title">عنوان</string>
    <string name="label_username">نام کاربری</string>
    <string name="label_wait">لطفاً صبر کنید</string>
    <string name="label_you">(شما)</string>
    <string name="message_back">آیا قصد بازگشت به صفحه‌ی اصلی را دارید؟</string>
    <string name="message_category_not_selected">همه‌ی گروه‌ها را انتخاب نکرده‌اید</string>
    <string name="message_exit">آیا قصد خروج از برنامه را دارید؟</string>
    <string name="message_select_category">لطفاً موضوعات موردنظرتان را انتخاب کنید</string>
</resources>
