<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="activities.MainActivity">

    <CustomControls.CustomTextViewBold
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_light"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_name"
        android:textColor="@color/textBlack"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/lytSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CustomControls.CustomButtonBold
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_holo_light"
            android:text="@string/label_search"
            android:textColor="@color/primaryLight"
            android:textSize="16sp" />

        <CustomControls.CustomButtonBold
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_red"
            android:text="@string/label_cancel_search"
            android:textColor="@color/textWhite"
            android:textSize="16sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/prgSearching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/border_light" />

        <CustomControls.CustomButton
            android:id="@+id/btnQuests"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_dark"
            android:text="@string/label_quests"
            android:textColor="@color/primaryLight"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btnQuests"
            android:orientation="vertical">

            <CustomControls.CustomButtonBold
                android:id="@+id/btnCurrentQuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_holo_dark"
                android:text="@string/label_current_quest"
                android:textColor="@color/textBlack"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imgSeparator"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:contentDescription="@string/app_name"
                android:src="@color/primaryLight" />

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swpReload"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvArchive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    tools:listitem="@layout/adapter_archive" />
            </android.support.v4.widget.SwipeRefreshLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
