<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/primaryLight"
        app:cardCornerRadius="7dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <CustomControls.CustomTextViewBold
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/primaryDark"
                android:gravity="right|center_vertical"
                android:padding="4dp"
                android:text="@string/label_title"
                android:textColor="@color/primaryLight"
                android:textSize="20sp" />

            <CustomControls.CustomTextView
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/label_message"
                android:textColor="@color/primaryDark"
                android:textSize="16sp" />

            <CustomControls.CustomButton
                android:id="@+id/btnOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_green"
                android:text="@string/label_confirm"
                android:textColor="@color/primaryLight"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>